done with some additional features

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 DB_LOCATION=mongodb+srv://yaralexie37:nHxaUwwrAXW8vhev@circulareconomy.bbiaymz.mongodb.net/?retryWrites=true&w=majority
+SERVER_URL=http://localhost:5000
